--- a/school/templates/appTemp/covid_info.html
+++ b/school/templates/appTemp/covid_info.html
@@ -1,6 +1,7 @@
 {% extends "appTemp/base_generic.html" %}
 
 {% block content %}
+<div class="covid_bg">
     <h1>Information</h1>
     <p>Update Covid-19 Information in {{ name }} Today</p>
     <ul class="list-group" style="width: 600px;">
@@ -13,4 +14,5 @@
             </div>    
         </li>
     </ul>
+</div>
 {% endblock %}
